<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp"
    tools:context="pe.com.gianbravo.blockedcontacts.presentation.DialerActivity"
    >

    <Button
        android:id="@+id/buttonExport"
        style="@style/BlacklistAppButton.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/dimenTitleXXS"
        android:text="@string/text_export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonImport"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/buttonImport"
        style="@style/BlacklistAppButton.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/dimenTitleXXS"
        android:text="@string/text_import"
        app:layout_constraintEnd_toStartOf="@+id/buttonExport"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonImport"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
        android:id="@+id/tvList"
        style="@style/GiancaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/text_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

        <Button
            android:id="@+id/buttonBlock"
            style="@style/BlacklistAppButton.Red"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/text_block"
            app:layout_constraintEnd_toStartOf="@+id/buttonRemove"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            />

        <Button
            android:id="@+id/buttonRemove"
            style="@style/BlacklistAppButton.Red"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/text_remove"
            app:layout_constraintBottom_toBottomOf="@+id/buttonBlock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonBlock"
            app:layout_constraintTop_toTopOf="@+id/buttonBlock"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvList"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/BlacklistAppTextInput"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            tools:layout_editor_absoluteX="16dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNumber"
                style="@style/EditTextTheme.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/text_number"
                android:imeOptions="actionGo"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>